--- a/frontend/src/components/Intro/AboutDanang/AboutDanang.css
+++ b/frontend/src/components/Intro/AboutDanang/AboutDanang.css
@@ -1,9 +1,108 @@
-.headPage a{
-    border: 1px solid  gray ;
+*{
+    margin: 0;
+    padding: 0;
+}
+body html{
+    width: 100%;
+    height: 100%;
+}
+
+
+.about__nav__icon--right{
+   
+    font-size: 20px ;
     color: grey;
+    display: inline;
+    
+   
+
+    
+    
+}
+.about__block{
+    padding-top: 10vh;
+}
+.about__nav a{
+    font-size: 16px ;
+    color: grey;
+    text-decoration: none;
+   
+}
+.about__block__title a{
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+    cursor: pointer;
+}
+.about__block__title a:hover{
+    color: orange;
+    transition: 0.3s;
+}
+.about__start a{
+    border: 1px solid  gray ;
+    color: gray;
     font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
     font-weight: 400;
     font-size: 12px;
     text-transform: uppercase;
     text-decoration: none;
+    padding: 3px;
+    margin: 3px;
+
+}
+.about__start a:hover{
+    color: white;
+    background-color: orange;
+    border: 1px solid orange ;
+}
+hr{
+    display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+  margin-top: 50px;
+}
+.about__block__plus{
+    position: relative;
+}
+.about__block__plus__comment{
+    position: absolute;
+    right: 0.5%;
+    z-index: 10;
+    cursor: pointer;
+}
+.about__block__plus__comment h5:hover{
+    color: orange;
+    transition: 0.3s;
+}
+.about__block__plus__comment h5{
+    display: inline;
+    margin: 0 5px 0;
+}
+
+.about__block__plus__day {
+    display: inline-block;
+    position: absolute;
+    left: 0.5%;
+    z-index: 10;
+    
+}
+.about__block__plus__day h5{
+    color: rgb(74, 73, 73);
+    font-size: 12px;
+}
+.about__block__plus__comment h5{
+    color: rgb(74, 73, 73);
+    font-size: 12px;
+}
+.about__block__content{
+    padding-top: 50px;
+}
+.about__block__image img{
+    width: 15vw;
+    height: 23vh;
+    transform: translateX();
 }
